<resources>
    <string name="app_name">TalkiBooki</string>
    <string name="facebook_app_id">616300462882739</string>
    <string name="fb_login_protocol_scheme">fb616300462882739</string>
    <string name="google_maps_key">AIzaSyAPDPt_7A7iWJT3HBz36O-3ks-KX1Eze7g</string>
    <string name="SignInWith">Sign in with</string>

    <string name="Home">Home</string>
    <string name="helpandSupport">Help &amp; Support</string>
    <string name="Notifications">Notification</string>
    <string name="MyAccount">My Account</string>

    <string name="BestInMotivation">Best In Motivation</string>
    <string name="SeeAll">See All</string>
    <string name="Thriller">Thriller</string>
    <string name="Historical">Historical</string>
    <string name="HabitstochangeLife">Habits to change Life</string>
    <string name="Author">Author: </string>
    <string name="Narrator">Narrator: </string>
    <string name="desc">An irritable old man, Borunbabu is plagued by loneliness with a bedridden wife and a self-centred family. However, Borunbabu finds himself at the centre of all attention when the President of India, his old friend, suddenly writes to him. A simple letter stirs the pot, but to what end?</string>
    <string name="similarAudioBook">Similar Audio Book</string>

    <string name="ChooseLanguage">Choose Language</string>
    <string name="listen_your_favourite_book_in_the_language_you_like">Listen your favourite book in the language you like</string>

    <string name="English">English</string>
    <string name="Bengali">Bengali - বাংলা</string>
    <string name="Gujrati">Gujrati - ગુજરાતી</string>
    <string name="Telugu">Telugu - తెలుగు</string>
    <string name="Malayalam">Malayalam - മലയാളം</string>
    <string name="Next">Next</string>
    <string name="Filter">Filter</string>
    <string name="All">All</string>
    <string name="Free">Free</string>
    <string name="Paid">Paid</string>
    <string name="Language">Language</string>
    <string name="Genre">Genre</string>
    <string name="Apply">Apply</string>
    <string name="Clear">Clear</string>
    <string name="ContactusforSupport">Contact us for Support</string>
    <string name="SuporttalkiBooki">subho@talkibooki.com</string>
    <string name="ph_033123456789">+91-9330290927</string>
    <string name="Select">Select</string>
    <string name="Name">Name</string>
    <string name="Mobile">Mobile</string>
    <string name="Type_your_message_here">Type your message here</string>
    <string name="Submit">Submit</string>
    <string name="editAccount">Edit Account</string>
    <string name="You_are_a_free_user">You are a free user</string>
    <string name="You_are_a_paid_user">You are a paid user</string>

    <string name="MySubscription">My Subscription</string>
    <string name="Share">Share</string>
    <string name="Logout">Logout</string>

    <string name="ThankYou">Thank You</string>
    <string name="ExploreAudioBook">Explore Audio Book</string>
    <string name="Wewillcontactyousoon">We will contact you soon. Till then keep enjoy our audio book. Keep listing our amazing collection..</string>
    <string name="MyScription">My Subscription</string>
    <string name="Update_ProfileImage">Update Profile Picture</string>
    <string name="Email">Email</string>
    <string name="upload_successfully">Upload Successfully!</string>
    <string name="upload_failed">Upload Failed!</string>
    <string name="Update">Update</string>
    <string name="Enter_email">Enter email</string>
    <string name="Enter_VAILDemail">Enter valid email</string>
    <string name="Enter_phone">Enter phone</string>
    <string name="Enter_name">Enter name</string>
    <string name="Enter_comment">Enter comment</string>
    <string name="Successfully_Update">Successfully Update</string>
    <string name="SelectAction">Select Action</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Pay">Subscription</string>
    <string name="Close">Close</string>
    <string name="Logout_alert_msg">Do you want to logout from TalkiBooki ?</string>
    <string name="Exit_alert_msg">Are you sure you want to exit from App?</string>
    <string name="Subscription_your_account_">Subscription your account and Listing our amazing collection</string>
    <string name="This_is_not_a_active_package">This is not an active package</string>
    <string name="AlreadySubscription">Already subscribed</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="please_check_internet">Please check your internet connection</string>
    <string name="Network_not_availabl_refresh">No internet connection available</string>
    <string name="Refresh">Refresh</string>
    <string name="PRIVACYPOLICY">PRIVACY POLICY</string>
    <string name="Please_accept_privacy_policy"><u>Please accept privacy policy</u></string>
</resources>