<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
   >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_bottomview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/_5sdp"
        android:paddingBottom="@dimen/_5sdp"
        android:gravity="center_vertical"
        android:background="@drawable/ic_bg_menu_home"
        android:weightSum="4">

        <TextView
            android:id="@+id/tv_bottomHome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_home_dselect"
            android:text="@string/Home"
            android:textSize="@dimen/_10sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_bottomHelp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_help_support_dselect"
            android:text="@string/helpandSupport"
            android:textSize="@dimen/_10sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_bottomNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_notification_dselect"
            android:text="@string/Notifications"
            android:textSize="@dimen/_10sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_bottomAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_my_account_dselect"
            android:text="@string/MyAccount"
            android:textSize="@dimen/_10sdp"
            android:drawablePadding="@dimen/_2sdp"
            android:gravity="center_horizontal"/>

    </LinearLayout>

</LinearLayout>
</layout>