<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@color/app_theme"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/tvMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/Exit_alert_msg"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sdp" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btNegative"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@drawable/ic_bg_text_help_support"
            android:text="@string/No"
            android:textAllCaps="false"
            android:textColor="@color/app_theme"
            android:textSize="@dimen/_16sdp" />

        <Button
            android:id="@+id/btPositive"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginLeft="@dimen/_40sdp"
            android:layout_weight="1"
            android:background="@drawable/ic_bg_text_help_support"
            android:text="@string/Yes"
            android:textAllCaps="false"
            android:textColor="@color/app_theme"
            android:textSize="@dimen/_16sdp" />

    </LinearLayout>

</LinearLayout>
