<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backgroung" >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rl_bottomView">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_alignParentEnd="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingLeft="@dimen/_5sdp"
                    android:paddingRight="@dimen/_5sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:drawableTop="@drawable/ic_edit_account"
                    android:drawablePadding="@dimen/_5sdp"
                    android:text="@string/editAccount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10sdp"/>

                <com.github.siyamed.shapeimageview.RoundedImageView
                    android:id="@+id/iv_demo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/ic_image_profile"
                    android:layout_below="@+id/tv_edit"
                    app:siRadius="10dp"
                    app:siBorderWidth="1dp"
                    android:layout_centerHorizontal="true"
                    app:siBorderColor="@color/white"
                    android:visibility="invisible"
                    app:siSquare="true" />

                <com.github.siyamed.shapeimageview.RoundedImageView
                    android:id="@+id/iv_profileimage"
                    android:layout_alignLeft="@+id/iv_demo"
                    android:layout_alignRight="@+id/iv_demo"
                    android:layout_alignTop="@+id/iv_demo"
                    android:layout_alignBottom="@+id/iv_demo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_image_profile"

                    app:siRadius="90dp"
                    app:siBorderWidth="1dp"
                    app:siBorderColor="@color/white"
                    app:siSquare="true" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvusername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_demo"
                    android:text="Piyali Nandi"
                    android:fontFamily="@font/app_font_poppins_semibold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_centerHorizontal="true"
                    android:textColor="@color/colorDeepBlack"
                    android:textSize="@dimen/_14ssp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvusertype"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/tvusername"
                    android:text="@string/You_are_a_free_user"
                    android:maxLines="3"
                    android:textColor="@color/devy_grey"
                    android:textSize="@dimen/_12ssp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_15sdp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_below="@+id/tvusertype"
                    android:background="@drawable/ic_bg_text_my_account">

                    <TextView
                        android:id="@+id/tv_MySubscription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="@string/MySubscription"
                        android:padding="@dimen/_10sdp"

                        android:drawableEnd="@drawable/ic_arrow_next_my_account"
                        android:drawableStart="@drawable/ic_my_subscription_my_account"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/app_font_poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"/>

                    <TextView
                        android:id="@+id/tv_share"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:text="@string/Share"
                        android:padding="@dimen/_10sdp"

                        android:layout_marginTop="@dimen/_5sdp"
                        android:drawableEnd="@drawable/ic_arrow_next_my_account"
                        android:drawableStart="@drawable/ic_share_my_account"
                        android:drawablePadding="@dimen/_10sdp"
                        android:fontFamily="@font/app_font_poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"/>

                    <TextView
                        android:id="@+id/tv_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="left"
                        android:drawablePadding="@dimen/_10sdp"
                        android:text="@string/Logout"
                        android:padding="@dimen/_10sdp"
                        android:drawableEnd="@drawable/ic_arrow_next_my_account"
                        android:drawableStart="@drawable/ic_logout_my_account"
                        android:fontFamily="@font/app_font_poppins_regular"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp"/>




                </LinearLayout>


            </RelativeLayout>
        </ScrollView>

        <ProgressBar
            android:id="@+id/pbloader"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            android:indeterminateTintMode="src_atop"
            android:indeterminateTint="@color/app_theme"
            android:visibility="gone"/>


        <RelativeLayout
            android:id="@+id/rl_bottomView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">
            <LinearLayout
                android:id="@+id/ll_bottomview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/_5sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:gravity="center_vertical"
                android:background="@drawable/ic_bg_menu_home"
                android:weightSum="4">

                <TextView
                    android:id="@+id/tv_bottomHome"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_home_dselect"
                    android:text="@string/Home"
                    android:textSize="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_2sdp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_bottomHelp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_help_support_dselect"
                    android:text="@string/helpandSupport"
                    android:textSize="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_2sdp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_bottomNotification"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_notification_dselect"
                    android:text="@string/Notifications"
                    android:textSize="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_2sdp"
                    android:gravity="center_horizontal"/>

                <TextView
                    android:id="@+id/tv_bottomAccount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_my_account_select"
                    android:text="@string/MyAccount"
                    android:textSize="@dimen/_10sdp"
                    android:drawablePadding="@dimen/_2sdp"
                    android:gravity="center_horizontal"/>

            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</layout>